--- a/UniInfo.Domain/UniInfo.Domain.csproj
+++ b/UniInfo.Domain/UniInfo.Domain.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
+  </ItemGroup>
 </Project>
